--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "http://localhost",
+        "APP_KEY": "base64:il17vyoeVvTwUVM4AOuJS5t3vTmHcLCQqDLEUw46V5Y=",
  
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
