--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     "routes": [
         {
-            "src": "/(css|js|images|fonts)/(.*)",
+            "src": "/(css|js|images|fonts|uploads|news-pictures)/(.*)",
             "dest": "/public/$1/$2"
         },
         {
