--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "http://https://community-canvas.vercel.app",
+        "APP_URL": "https://community-canvas.vercel.app",
         "APP_KEY": "base64:il17vyoeVvTwUVM4AOuJS5t3vTmHcLCQqDLEUw46V5Y=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
