--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "https://community-canvas.vercel.app",
+        "ASSET_URL":"${APP_URL}",
         "APP_KEY": "base64:il17vyoeVvTwUVM4AOuJS5t3vTmHcLCQqDLEUw46V5Y=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
